# Napkin-AI-API

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  failures  main.py  pyproject.toml  requirements.txt  streamlit_app.py
.github/: CODEOWNERS  CONTRIBUTING.md  FUNDING.yml  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: error_reporter.py
.github/workflows/: ci.yml  error-monitor.yml  error-notifications.yml  release.yml
docs/: API_GUIDE.md  API_REFERENCE.md  CHANGELOG.md  CONTRIBUTING.md  FUNDING.yml  GH_MONITOR.md  GITHUB_ERROR_MONITORING.md  GITHUB_FOLDER.md  INDEX.md  PRD.md  PROJECT_GUIDE.md  README.md  README_DOCS.md  SECURITY.md  SETUP.md  STREAMLIT_DEPLOYMENT.md  TODO.md  TO_WEBAPP.md  USAGE.md  WEB_APP_FEATURES.md  napkin_ai_api.md
docs/changelog_todo/: CHANGELOG.md
scripts/: FAILURES_README.md  README.md  SETUP.md  check_failures.py  failures.sh  get_github_failures.py  gh_monitor.py  quick_failures.py
src/: __init__.py
src/api/: client.py  models.py  monitor.py
src/cli/: __init__.py  commands.py  display.py  interactive.py
src/core/: __init__.py  generator.py
src/storage/: __init__.py
src/utils/: config.py  constants.py  helpers.py
tests/: test_config.py  test_models.py
