[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "napkin-api-playground"
version = "0.1.3"
description = "Python playground for the Napkin AI API"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
httpx = "^0.25.0"
pydantic = "^2.0"
pydantic-settings = "^2.0"
typer = {extras = ["all"], version = "^0.9.0"}
rich = "^13.0"
python-dotenv = "^1.0"
tenacity = "^8.2"
aiofiles = "^23.0"
streamlit = "^1.48.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-asyncio = "^0.21"
pytest-cov = "^4.1"
ruff = "^0.1.0"
mypy = "^1.7"
pre-commit = "^3.5"

[tool.poetry.scripts]
napkin = "src.cli.commands:app"
