[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "napkin-api-playground"
version = "0.3.2"
description = "Python playground for the Napkin AI API"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.28.1"
pydantic = "^2.12"
pydantic-settings = "^2.11"
typer = {extras = ["all"], version = "^0.20.0"}
rich = "^13.0"
python-dotenv = "^1.2"
tenacity = "^9.1"
aiofiles = "^24.1"
streamlit = "^1.50.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-asyncio = "^0.21"
pytest-cov = "^4.1"
ruff = "^0.14.2"
mypy = "^1.18"
pre-commit = "^4.3"

[tool.poetry.scripts]
napkin = "src.cli.commands:app"
